<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidAnimations</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
       
    <string name="photo_credits"><b>Golden Gate Sunset</b> by <b>Romain Guy</b></string>
    <string name="address"><b>Address:</b> Golden Gate Bridge, San Francisco, CA 94129</string>
    <string name="elevation"><b>Elevation:</b>  220\' (67 m)</string>
    <string name="height"><b>Height:</b>  746\' (227 m)</string>
    <string name="construction"><b>Construction started:</b>  1933</string>
    <string name="span"><b>Longest span:</b>  4,200\' (1,280 m)</string>
    <string name="length"><b>Total length:</b>  8,980\' (2,737 m)</string>
    <string name="summary">"The Golden Gate Bridge is a suspension bridge spanning the Golden Gate, the opening of the San Francisco Bay into the Pacific Ocean."</string>
    <string name="bridge">Golden Gate Bridge</string>
    
    
</resources>
