<?xml version="1.0" encoding="utf-8"?>
<com.example.androidanimations.SlidingFragments.FractionLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/slide_fragment_horizontal_margin"
    android:layout_marginRight="@dimen/slide_fragment_horizontal_margin"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_vertical_margin"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/bridge"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_vertical_margin"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/summary"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/length"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/span"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/construction"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/height"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/elevation"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:text="@string/address"
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_horizontal_margin"
        android:layout_marginRight="@dimen/text_horizontal_margin"
        android:layout_marginTop="@dimen/text_vertical_margin"
        android:text="@string/photo_credits"
        android:textColor="#000000"
        android:textSize="10sp" />

</com.example.androidanimations.SlidingFragments.FractionLinearLayout>